syntax = "proto3";
package provider.client.pb;

service ProviderRegisterService {

    rpc GetPublicKey(GetPublicKeyReq) returns (PublicKeyResp){}

	rpc Register(RegisterReq) returns (RegisterResp){}

}
message GetPublicKeyReq {
    uint32 version =1;
}

message PublicKeyResp {
    bytes publicKey=1;
}

message RegisterReq{
    uint32 version =1;
    bytes auth = 2;
    bytes nodeIdEnc = 3;
    bytes publicKeyEnc = 4;
    bytes encryptKeyEnc = 5;
    bytes walletAddressEnc=6;
    bytes billEmailEnc=7;
    uint64 mainStorageVolume=8;
    uint64 upBandwidth=9;
    uint64 downBandwidth=10;
    uint64 testUpBandwidth=11;
    uint64 testDownBandwidth=12;
    float availability=13;
    repeated uint64 extraStorageVolume=14;
}

message RegisterResp{
	bool success = 1;
}